fixed issue with letter-spacing not working in mobile browser

--- a/src/app/zones/zone-details/zone-details.component.css
+++ b/src/app/zones/zone-details/zone-details.component.css
@@ -17,10 +17,6 @@
   margin-left: 1em;
 }
 
-.crz-cases-trend-icon {
-  letter-spacing: -6px;
-}
-
 .crz-cases {
   display: flex;
   flex-direction: row;
